--- a/site/index.html
+++ b/site/index.html
@@ -10,9 +10,10 @@
 	<!-- Styles -->
 	<link href="css/site.css" rel="stylesheet" type="text/css"></link>
 	<!-- <link rel="stylesheet" href="/css/lightbox.css" type="text/css" media="screen"></link>  -->
-	<link href="//cdn.rawgit.com/noelboss/featherlight/1.2.0/release/featherlight.min.css" type="text/css" rel="stylesheet" title="Featherlight Styles" />
+<!--	<link href="//cdn.rawgit.com/noelboss/featherlight/1.2.0/release/featherlight.min.css" type="text/css" rel="stylesheet" title="Featherlight Styles" />-->
 	<!-- see http://kenwheeler.github.io/slick/ -->
 	<!-- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.15/slick.css"/> -->		
+    <link rel="stylesheet" href="/fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
 </head> 
 <body> 
 	<div id="content" class="fixed-container">
@@ -55,7 +56,7 @@
 				</div>
 				<div id="tab-photography">
 					<!-- <img class="tab-background" src="images/castleton_tower_full_page.jpg" /> -->
-					<div class="tab-content-full tab-content-bordered">
+					<div class="tab-content-full">
 						<!-- <h3>Photography</h3>
 						<hr /> -->
 						<div id="photography-tabs" style="position: relative;">
@@ -67,46 +68,173 @@
 									<a href="#photography-tab-scenic">Scenic</a>	
 								</li>
 							</ul>
-							<!-- need to clearfix right here - todo -->
 							<div class="clearfix"></div>
-							<div id="photography-tab-action">
-								Action
-							</div>
-							<div id="photography-tab-scenic">
-								<div class="image-gallery">
-									<a href="/images/scenic/cathedral_spires.jpg" data-lightbox="scenic-set"
-										data-featherlight="/images/scenic/cathedral_spires.jpg">
-										<img src="/images/scenic/cathedral_spires.jpg" />
-									</a>
-									<!-- <a class="fancybox" rel="group" href="/images/scenic/cathedral_spires.jpg">
-										<img src="/images/scenic/cathedral_spires.jpg" alt="" />
-									</a> -->
-									<!-- <div id="cathedralspires">
-										<img src="/images/scenic/cathedral_spires.jpg" />
-									</div>
-									<a href="/images/scenic/charlotte_sunset.jpg" data-lightbox="scenic-set">
-										<img src="/images/scenic/charlotte_sunset.jpg" />
-									</a> -->
-									<!-- <a href="/images/scenic/hump_sunset.jpg" data-lightbox="scenic-set">
-										<img src="/images/scenic/hump_sunset.jpg" />
-									</a>
-									<a href="/images/scenic/marshfield3.jpg" data-lightbox="scenic-set">
-										<img src="/images/scenic/marshfield3.jpg" />
-									</a>
-									<a href="/images/scenic/morning_on_mansfield.jpg" data-lightbox="scenic-set">
-										<img src="/images/scenic/morning_on_mansfield.jpg" />
-									</a>
-									<a href="/images/scenic/pleasant_valley.jpg" data-lightbox="scenic-set">
-										<img src="/images/scenic/pleasant_valley.jpg" />
-									</a>
-									<a href="/images/scenic/sweden.jpg" data-lightbox="scenic-set">
-										<img src="/images/scenic/sweden.jpg" />
-									</a>
-									<a href="/images/scenic/vineyard.jpg" data-lightbox="scenic-set">
-										<img src="/images/scenic/vineyard.jpg" />
-									</a> -->
-								</div>
-							</div>
+                            <div class="image-gallery-container">
+                                <div id="photography-tab-action" class="image-gallery">
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/anni_dynosaur3.jpg"
+                                       title="test thumb 1">
+                                        <img src="/images/action/anni_dynosaur3.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/chinaglide2.jpg"
+                                       title="test thumb 1">
+                                        <img src="/images/action/chinaglide2.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/courtney_spooks.jpg"
+                                       title="test thumb 1">
+                                        <img class="wide" src="/images/action/courtney_spooks.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/daks_fecalator.jpg"
+                                       title="test thumb 1">
+                                        <img src="/images/action/daks_fecalator.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/deep_water_soloing3.jpg"
+                                       title="test thumb 1">
+                                        <img class="wide" src="/images/action/deep_water_soloing3.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/ground_up.jpg"
+                                       title="test thumb 1">
+                                        <img src="/images/action/ground_up.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/high_grade_direct_neil1.jpg"
+                                       title="test thumb 1">
+                                        <img src="/images/action/high_grade_direct_neil1.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/high_grade_matt1.jpg"
+                                       title="test thumb 1">
+                                        <img src="/images/action/high_grade_matt1.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/hot_seat_in_hell1.jpg"
+                                       title="test thumb 1">
+                                        <img class="wide" src="/images/action/hot_seat_in_hell1.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/jeremy_snake.jpg"
+                                       title="test thumb 1">
+                                        <img src="/images/action/jeremy_snake.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/kevin_carcass.jpg"
+                                       title="test thumb 1">
+                                        <img src="/images/action/kevin_carcass.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/lindsay_pineo.jpg"
+                                       title="test thumb 1">
+                                        <img class="wide" src="/images/action/lindsay_pineo.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/peter_moss2.jpg"
+                                       title="test thumb 1">
+                                        <img src="/images/action/peter_moss2.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/peter_moss5.jpg"
+                                       title="test thumb 1">
+                                        <img src="/images/action/peter_moss5.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/peter_synesthetic_progression_main.jpg"
+                                       title="test thumb 1">
+                                        <img class="wide" src="/images/action/peter_synesthetic_progression_main.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/pure_gold3.jpg"
+                                       title="test thumb 1">
+                                        <img src="/images/action/pure_gold3.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/rory_hardway.jpg"
+                                       title="test thumb 1">
+                                        <img src="/images/action/rory_hardway.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/rowdey_entertainment1.jpg"
+                                       title="test thumb 1">
+                                        <img class="wide" src="/images/action/rowdey_entertainment1.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/the_hard_way_peter.jpg"
+                                       title="test thumb 1">
+                                        <img src="/images/action/the_hard_way_peter.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/the_hard_way_vasya.jpg"
+                                       title="test thumb 1">
+                                        <img src="/images/action/the_hard_way_vasya.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/trav_ent1.jpg"
+                                       title="test thumb 1">
+                                        <img src="/images/action/trav_ent1.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/trav_ganesh1.jpg"
+                                       title="test thumb 1">
+                                        <img src="/images/action/trav_ganesh1.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/webber_dihedral1.jpg"
+                                       title="test thumb 1">
+                                        <img class="wide" src="/images/action/webber_dihedral1.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="action"
+                                       href="/images/action/zabba_mccormick.jpg"
+                                       title="test thumb 1">
+                                        <img class="wide" src="/images/action/zabba_mccormick.jpg" alt="" />
+                                    </a>
+                                </div>
+                                <div id="photography-tab-scenic" class="image-gallery">
+                                    <a class="fancybox" rel="scenic"
+                                       href="/images/scenic/cathedral_spires.jpg"
+                                       title="test thumb 1">
+                                        <img class="wide" src="/images/scenic/cathedral_spires.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="scenic" 
+                                       href="/images/scenic/charlotte_sunset.jpg"
+                                       title="thumbnail text">
+                                        <img class="wide" src="/images/scenic/charlotte_sunset.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="scenic" 
+                                       href="/images/scenic/hump_sunset.jpg"
+                                       title="thumbnail text">
+                                        <img class="wide" src="/images/scenic/hump_sunset.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="scenic" 
+                                       href="/images/scenic/marshfield3.jpg"
+                                       title="thumbnail text">
+                                        <img class="wide" src="/images/scenic/marshfield3.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="scenic" 
+                                       href="/images/scenic/morning_on_mansfield.jpg"
+                                       title="thumbnail text">
+                                        <img class="wide" src="/images/scenic/morning_on_mansfield.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="scenic" 
+                                       href="/images/scenic/pleasant_valley.jpg"
+                                       title="thumbnail text">
+                                        <img class="wide" src="/images/scenic/pleasant_valley.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="scenic" 
+                                       href="/images/scenic/sweden.jpg"
+                                       title="thumbnail text">
+                                        <img class="wide" src="/images/scenic/sweden.jpg" alt="" />
+                                    </a>
+                                    <a class="fancybox" rel="scenic" 
+                                       href="/images/scenic/vineyard.jpg"
+                                       title="thumbnail text">
+                                        <img class="wide" src="/images/scenic/vineyard.jpg" alt="" />
+                                    </a>
+                                </div>
+                            </div>
 						</div>
 					</div>
 				</div>
@@ -116,17 +244,10 @@
 					<div class="tab-content-full tab-content-bordered">
 						<h3>Motion</h3>
 						<hr />
-						<!-- <p>
-							Visit <a href="http://vimeo.com/davevuono" target="_blank">vimeo</a> to view videos.
-						</p> -->
-						<iframe src="//player.vimeo.com/video/107614816" width="750" height="422" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-						<!-- <p>
-							<a href="http://vimeo.com/107614816">New England Video Essay part 1</a> from <a href="http://vimeo.com/davevuono">Dave Vuono</a> on <a href="https://vimeo.com">Vimeo</a>.
-						</p> -->
-						<iframe src="//player.vimeo.com/video/107415955" width="750" height="422" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-						<!-- <p>
-							<a href="http://vimeo.com/107415955">New England Video Essay part 2</a> from <a href="http://vimeo.com/davevuono">Dave Vuono</a> on <a href="https://vimeo.com">Vimeo</a>.
-						</p> -->
+                        <div class="motion-embeds-container">
+                            <iframe src="//player.vimeo.com/video/107614816" width="750" height="422" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            <iframe src="//player.vimeo.com/video/107415955" width="750" height="422" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        </div>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -236,8 +357,10 @@
 	
 	<script src="//code.jquery.com/jquery-1.10.2.js" type="text/javascript"></script>
     <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js" type="text/javascript"></script>
-    
-    <script src="//cdn.rawgit.com/noelboss/featherlight/1.2.0/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.0.6/jquery.mousewheel.min.js"></script>
+    <script type="text/javascript" src="/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+
+<!--    <script src="//cdn.rawgit.com/noelboss/featherlight/1.2.0/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>-->
     <!--<script type="text/javascript" src="js/lightbox.js"></script> -->
 	<script src="js/settings.js" type="text/javascript"></script>
     <script src="js/site.js" type="text/javascript"></script>
