--- a/site/index.html
+++ b/site/index.html
@@ -9,11 +9,7 @@
  	
 	<!-- Styles -->
 	<link href="css/site.css" rel="stylesheet" type="text/css"></link>
-	<!-- <link rel="stylesheet" href="/css/lightbox.css" type="text/css" media="screen"></link>  -->
-<!--	<link href="//cdn.rawgit.com/noelboss/featherlight/1.2.0/release/featherlight.min.css" type="text/css" rel="stylesheet" title="Featherlight Styles" />-->
-	<!-- see http://kenwheeler.github.io/slick/ -->
-	<!-- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.15/slick.css"/> -->		
-    <link rel="stylesheet" href="/fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
+    <link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
 </head> 
 <body> 
 	<div id="content" class="fixed-container">
@@ -72,166 +68,166 @@
                             <div class="image-gallery-container">
                                 <div id="photography-tab-action" class="image-gallery">
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/anni_dynosaur3.jpg"
+                                       href="images/action/anni_dynosaur3.jpg"
                                        title="test thumb 1">
-                                        <img src="/images/action/anni_dynosaur3.jpg" alt="" />
+                                        <img src="images/action/anni_dynosaur3.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/chinaglide2.jpg"
+                                       href="images/action/chinaglide2.jpg"
                                        title="test thumb 1">
-                                        <img src="/images/action/chinaglide2.jpg" alt="" />
+                                        <img src="images/action/chinaglide2.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/courtney_spooks.jpg"
+                                       href="images/action/courtney_spooks.jpg"
                                        title="test thumb 1">
-                                        <img class="wide" src="/images/action/courtney_spooks.jpg" alt="" />
+                                        <img class="wide" src="images/action/courtney_spooks.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/daks_fecalator.jpg"
+                                       href="images/action/daks_fecalator.jpg"
                                        title="test thumb 1">
-                                        <img src="/images/action/daks_fecalator.jpg" alt="" />
+                                        <img src="images/action/daks_fecalator.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/deep_water_soloing3.jpg"
+                                       href="images/action/deep_water_soloing3.jpg"
                                        title="test thumb 1">
-                                        <img class="wide" src="/images/action/deep_water_soloing3.jpg" alt="" />
+                                        <img class="wide" src="images/action/deep_water_soloing3.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/ground_up.jpg"
+                                       href="images/action/ground_up.jpg"
                                        title="test thumb 1">
-                                        <img src="/images/action/ground_up.jpg" alt="" />
+                                        <img src="images/action/ground_up.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/high_grade_direct_neil1.jpg"
+                                       href="images/action/high_grade_direct_neil1.jpg"
                                        title="test thumb 1">
-                                        <img src="/images/action/high_grade_direct_neil1.jpg" alt="" />
+                                        <img src="images/action/high_grade_direct_neil1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/high_grade_matt1.jpg"
+                                       href="images/action/high_grade_matt1.jpg"
                                        title="test thumb 1">
-                                        <img src="/images/action/high_grade_matt1.jpg" alt="" />
+                                        <img src="images/action/high_grade_matt1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/hot_seat_in_hell1.jpg"
+                                       href="images/action/hot_seat_in_hell1.jpg"
                                        title="test thumb 1">
-                                        <img class="wide" src="/images/action/hot_seat_in_hell1.jpg" alt="" />
+                                        <img class="wide" src="images/action/hot_seat_in_hell1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/jeremy_snake.jpg"
+                                       href="images/action/jeremy_snake.jpg"
                                        title="test thumb 1">
-                                        <img src="/images/action/jeremy_snake.jpg" alt="" />
+                                        <img src="images/action/jeremy_snake.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/kevin_carcass.jpg"
+                                       href="images/action/kevin_carcass.jpg"
                                        title="test thumb 1">
-                                        <img src="/images/action/kevin_carcass.jpg" alt="" />
+                                        <img src="images/action/kevin_carcass.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/lindsay_pineo.jpg"
+                                       href="images/action/lindsay_pineo.jpg"
                                        title="test thumb 1">
-                                        <img class="wide" src="/images/action/lindsay_pineo.jpg" alt="" />
+                                        <img class="wide" src="images/action/lindsay_pineo.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/peter_moss2.jpg"
+                                       href="images/action/peter_moss2.jpg"
                                        title="test thumb 1">
-                                        <img src="/images/action/peter_moss2.jpg" alt="" />
+                                        <img src="images/action/peter_moss2.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/peter_moss5.jpg"
+                                       href="images/action/peter_moss5.jpg"
                                        title="test thumb 1">
-                                        <img src="/images/action/peter_moss5.jpg" alt="" />
+                                        <img src="images/action/peter_moss5.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/peter_synesthetic_progression_main.jpg"
+                                       href="images/action/peter_synesthetic_progression_main.jpg"
                                        title="test thumb 1">
-                                        <img class="wide" src="/images/action/peter_synesthetic_progression_main.jpg" alt="" />
+                                        <img class="wide" src="images/action/peter_synesthetic_progression_main.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/pure_gold3.jpg"
+                                       href="images/action/pure_gold3.jpg"
                                        title="test thumb 1">
-                                        <img src="/images/action/pure_gold3.jpg" alt="" />
+                                        <img src="images/action/pure_gold3.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/rory_hardway.jpg"
+                                       href="images/action/rory_hardway.jpg"
                                        title="test thumb 1">
-                                        <img src="/images/action/rory_hardway.jpg" alt="" />
+                                        <img src="images/action/rory_hardway.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/rowdey_entertainment1.jpg"
+                                       href="images/action/rowdey_entertainment1.jpg"
                                        title="test thumb 1">
-                                        <img class="wide" src="/images/action/rowdey_entertainment1.jpg" alt="" />
+                                        <img class="wide" src="images/action/rowdey_entertainment1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/the_hard_way_peter.jpg"
+                                       href="images/action/the_hard_way_peter.jpg"
                                        title="test thumb 1">
-                                        <img src="/images/action/the_hard_way_peter.jpg" alt="" />
+                                        <img src="images/action/the_hard_way_peter.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/the_hard_way_vasya.jpg"
+                                       href="images/action/the_hard_way_vasya.jpg"
                                        title="test thumb 1">
-                                        <img src="/images/action/the_hard_way_vasya.jpg" alt="" />
+                                        <img src="images/action/the_hard_way_vasya.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/trav_ent1.jpg"
+                                       href="images/action/trav_ent1.jpg"
                                        title="test thumb 1">
-                                        <img src="/images/action/trav_ent1.jpg" alt="" />
+                                        <img src="images/action/trav_ent1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/trav_ganesh1.jpg"
+                                       href="images/action/trav_ganesh1.jpg"
                                        title="test thumb 1">
-                                        <img src="/images/action/trav_ganesh1.jpg" alt="" />
+                                        <img src="images/action/trav_ganesh1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/webber_dihedral1.jpg"
+                                       href="images/action/webber_dihedral1.jpg"
                                        title="test thumb 1">
-                                        <img class="wide" src="/images/action/webber_dihedral1.jpg" alt="" />
+                                        <img class="wide" src="images/action/webber_dihedral1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="/images/action/zabba_mccormick.jpg"
+                                       href="images/action/zabba_mccormick.jpg"
                                        title="test thumb 1">
-                                        <img class="wide" src="/images/action/zabba_mccormick.jpg" alt="" />
+                                        <img class="wide" src="images/action/zabba_mccormick.jpg" alt="" />
                                     </a>
                                 </div>
                                 <div id="photography-tab-scenic" class="image-gallery">
                                     <a class="fancybox" rel="scenic"
-                                       href="/images/scenic/cathedral_spires.jpg"
+                                       href="images/scenic/cathedral_spires.jpg"
                                        title="test thumb 1">
-                                        <img class="wide" src="/images/scenic/cathedral_spires.jpg" alt="" />
+                                        <img class="wide" src="images/scenic/cathedral_spires.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="scenic" 
-                                       href="/images/scenic/charlotte_sunset.jpg"
+                                       href="images/scenic/charlotte_sunset.jpg"
                                        title="thumbnail text">
-                                        <img class="wide" src="/images/scenic/charlotte_sunset.jpg" alt="" />
+                                        <img class="wide" src="images/scenic/charlotte_sunset.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="scenic" 
-                                       href="/images/scenic/hump_sunset.jpg"
+                                       href="images/scenic/hump_sunset.jpg"
                                        title="thumbnail text">
-                                        <img class="wide" src="/images/scenic/hump_sunset.jpg" alt="" />
+                                        <img class="wide" src="images/scenic/hump_sunset.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="scenic" 
-                                       href="/images/scenic/marshfield3.jpg"
+                                       href="images/scenic/marshfield3.jpg"
                                        title="thumbnail text">
-                                        <img class="wide" src="/images/scenic/marshfield3.jpg" alt="" />
+                                        <img class="wide" src="images/scenic/marshfield3.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="scenic" 
-                                       href="/images/scenic/morning_on_mansfield.jpg"
+                                       href="images/scenic/morning_on_mansfield.jpg"
                                        title="thumbnail text">
-                                        <img class="wide" src="/images/scenic/morning_on_mansfield.jpg" alt="" />
+                                        <img class="wide" src="images/scenic/morning_on_mansfield.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="scenic" 
-                                       href="/images/scenic/pleasant_valley.jpg"
+                                       href="images/scenic/pleasant_valley.jpg"
                                        title="thumbnail text">
-                                        <img class="wide" src="/images/scenic/pleasant_valley.jpg" alt="" />
+                                        <img class="wide" src="images/scenic/pleasant_valley.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="scenic" 
-                                       href="/images/scenic/sweden.jpg"
+                                       href="images/scenic/sweden.jpg"
                                        title="thumbnail text">
-                                        <img class="wide" src="/images/scenic/sweden.jpg" alt="" />
+                                        <img class="wide" src="images/scenic/sweden.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="scenic" 
-                                       href="/images/scenic/vineyard.jpg"
+                                       href="images/scenic/vineyard.jpg"
                                        title="thumbnail text">
-                                        <img class="wide" src="/images/scenic/vineyard.jpg" alt="" />
+                                        <img class="wide" src="images/scenic/vineyard.jpg" alt="" />
                                     </a>
                                 </div>
                             </div>
@@ -354,16 +350,11 @@
 	<!-- scripts are here for best practice -->
 	<!--<script type="text/javascript" src="js/prototype.js"></script>-->
 	<!--<script type="text/javascript" src="js/scriptaculous.js?load=effects"></script>-->
-	
 	<script src="//code.jquery.com/jquery-1.10.2.js" type="text/javascript"></script>
     <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js" type="text/javascript"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.0.6/jquery.mousewheel.min.js"></script>
-    <script type="text/javascript" src="/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
-
-<!--    <script src="//cdn.rawgit.com/noelboss/featherlight/1.2.0/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>-->
-    <!--<script type="text/javascript" src="js/lightbox.js"></script> -->
+    <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
 	<script src="js/settings.js" type="text/javascript"></script>
     <script src="js/site.js" type="text/javascript"></script>
-    <!--<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.15/slick.min.js"></script>-->
 </body> 
 </html>
